BBB: dev_tree: Add in the configuration
Add the configuration settings for the role

Signed-off-by: Dan Murphy <dmurphy@ti.com>

--- a/arch/arm/boot/dts/am335x-bone-common.dtsi
+++ b/arch/arm/boot/dts/am335x-bone-common.dtsi
@@ -293,7 +293,9 @@
 		ti,src_settling_time_ms = <50>;
 		ti,fast_role_support = <0>;
 		ti,priority = <0>;
-
+		ti,role = <2>;
+		ti,rp_val = <2>;
+		ti,flags = <0>;
 
 		source@1 {
 			ti,current-flow = <0>; /* 0 for source 1 for sink */
