--- a/drivers/net/phy/Kconfig
+++ b/drivers/net/phy/Kconfig
@@ -108,6 +108,16 @@ config STE10XP
 	---help---
 	  This is the driver for the STe100p and STe101p PHYs.
 
+config DP83822_PHY
+	tristate "Texas Instruments DP83822 PHY"
+	---help---
+	  Supports the DP83822 PHY.
+
+config DP83811_PHY
+	tristate "Texas Instruments DP83811 PHY"
+	---help---
+	  Supports the DP83811 PHY.
+
 config LSI_ET1011C_PHY
 	tristate "Driver for LSI ET1011C PHY"
 	---help---
