--- a/arch/arm/configs/omap2plus_defconfig
+++ b/arch/arm/configs/omap2plus_defconfig
@@ -354,3 +354,7 @@ CONFIG_LIBCRC32C=y
 CONFIG_FONTS=y
 CONFIG_FONT_8x8=y
 CONFIG_FONT_8x16=y
+
+CONFIG_PHYLIB=y
+CONFIG_DP83811_PHY=y
+CONFIG_DP83822_PHY=y
